[project]
name = "bug-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for triaging software bug reports"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
